feat: added img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Meu site</title>
   </head>
   <body>
-    <header id="inicio">
+    <header>
         <nav>
             <h2>Samuel <span>Braga</span></h2>
             
@@ -22,6 +22,10 @@
             <a href="#contato">Contato</a>
         </nav>
     </header>
+
+    <section id="inicio">
+      <img src="img/eu2.png">
+    </section>
 
     <section id="sobre"></section>
     <section id="projetos"></section>
